fixed footer link color issue on mobile viewports

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -198,9 +198,6 @@ footer {
 	justify-self: flex-end;
 	margin-top: auto;
 }
-.footer-contact-link {
-	color: white;
-}
 footer a {
 	text-decoration: underline;
 }
